--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,12 @@
     "test": "node ./config/test.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "JSON2": "^0.1.0",
+    "chai": "^3.5.0",
+    "express": "^4.14.0",
+    "mocha": "^3.2.0",
+    "parse-server": "^2.3.2"
+  }
 }
