added description and tags field in Project.js, added an interface class 'ParseClass.js', made changes to utilize this interface class

--- a/server/config/projectConfig.json
+++ b/server/config/projectConfig.json
@@ -4,12 +4,14 @@
 	"PARENT_FIELD": "parent",
 	"ORIGINAL_PARENT_FIELD": "original_parent",
 	"NAME_FIELD": "name",
-	"IS_DUBBED_FIELD": "is_dubbed", 
-	"CATEGORY_FIELD": "category", 
-	"LANGUAGE_FIELD": "language", 
-	"AUTHOR_FIELD": "author", 
+	"DESCRIPTION_FIELD": "description",
+	"TAGS_FIELD": "tags",
+	"IS_DUBBED_FIELD": "is_dubbed",
+	"CATEGORY_FIELD": "category",
+	"LANGUAGE_FIELD": "language",
+	"AUTHOR_FIELD": "author",
 	"RESOLUTION_X_FIELD": "resolution_x",
-	"RESOLUTION_Y_FIELD": "resolution_y", 
-	"SLIDE_ORDERING_SEQUENCE_FIELD": "slide_ordering_sequence", 
+	"RESOLUTION_Y_FIELD": "resolution_y",
+	"SLIDE_ORDERING_SEQUENCE_FIELD": "slide_ordering_sequence",
 	"SLIDES_FIELD": "slides"
 }
