validateSlides almost implemented in Project.js, and Slide.js almost implemented (except validateResource()

--- a/server/config/slideConfig.json
+++ b/server/config/slideConfig.json
@@ -5,7 +5,8 @@
     "HYPERLINKS_FIELD": "hyperlinks",
     "TYPE_FIELD": "type",
     "RESOURCE_FIELD": "resource",
-    "IS_EDITED": "id_edited",
+    "IS_EDITED_FIELD": "is_edited",
 
-    "CLASS_NAME": "Slide"
+    "CLASS_NAME": "Slide",
+    "POSSIBLE_SEGMENT_TYPES": ["Video", "Image", "Question"]
 }
