--- a/server/config/slideConfig.json
+++ b/server/config/slideConfig.json
@@ -8,5 +8,9 @@
     "IS_EDITED_FIELD": "is_edited",
 
     "CLASS_NAME": "Slide",
-    "POSSIBLE_SEGMENT_TYPES": ["Video", "Image", "Question"]
+    "POSSIBLE_SEGMENT_TYPES": [
+        "Image", 
+        "Video",
+        "Question"
+    ]
 }
