--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
+    "start": "nodemon --ignore ./src/*",
     "test": "node ./config/test.js",
     "dev": "babel --watch=./src --out-dir=./build"
   },
@@ -12,13 +13,16 @@
   "dependencies": {
     "JSON2": "^0.1.0",
     "express": "^4.14.0",
+    "flow-runtime": "^0.2.1",
     "parse-server": "^2.3.2",
     "validate.js": "^0.11.1"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
+    "babel-plugin-flow-runtime": "^0.2.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "chai": "^3.5.0",
+    "flow-runtime": "^0.2.1",
     "mocha": "^3.2.0"
   }
 }
