completed babel & flow setup

--- a/server/config/server-config/config.json
+++ b/server/config/server-config/config.json
@@ -2,5 +2,5 @@
 	"MONGO_DB_URL": "mongodb://localhost:27017/test",
 	"PARSE_SERVER_URL": "http://localhost:1337/parse",
 	"HTTP_SERVER_PORT_NO": 1337,
-	"CLOUD_URL": "./src/cloud/main.js"
+	"CLOUD_URL": "./build/cloud/main.js"
 }
