--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,7 +1,10 @@
 {
-  "plugins": [["flow-runtime", {
-    "assert": true,
-    "annotate": true
-  }],
-  "transform-flow-strip-types"]
+  "plugins": [
+      ["flow-runtime", {
+          "assert": true,
+          "annotate": true
+      }],
+      "transform-flow-strip-types",
+  ],
+  "presets": ["es2015"]
 }
