solved all the problems that arose due to babel and flow. Now, start using flow

--- a/server/.babelrc
+++ b/server/.babelrc
@@ -4,7 +4,7 @@
           "assert": true,
           "annotate": true
       }],
-      "transform-flow-strip-types",
+      "transform-flow-strip-types"
   ],
   "presets": ["es2015"]
 }
