--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-flow-runtime": "^0.2.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-watch": "^2.0.6",
     "chai": "^3.5.0",
     "flow-runtime": "^0.2.1",
     "mocha": "^3.2.0"
