--- a/server/.babelrc
+++ b/server/.babelrc
@@ -4,7 +4,8 @@
           "assert": true,
           "annotate": true
       }],
-      "transform-flow-strip-types"
+      "transform-flow-strip-types",
+      "transform-decorators-legacy"
   ],
-  "presets": ["es2015"]
+  "presets": ["es2015", "stage-0"]
 }
