--- a/server/config/cloud-config/models/imageConfig.json
+++ b/server/config/cloud-config/models/imageConfig.json
@@ -1,7 +1,8 @@
 {
     "ID_FIELD": "id",
     "AUDIO_ID_FIELD": "audio_id",
-    "URL_FIELD": "url",
     "IS_EDITED_FIELD": "is_edited",
+    "TYPE_FIELD": "type",
+    "URL_FIELD": "url",
     "CLASS_NAME": "Image"
 }
