--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "start": "nodemon --ignore ./src/*",
-    "test": "node ./config/test.js",
+    "test": "node ./test/test.js",
     "dev": "babel --watch=./src --out-dir=./build"
   },
   "author": "",
@@ -20,8 +20,10 @@
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-plugin-flow-runtime": "^0.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "babel-watch": "^2.0.6",
     "chai": "^3.5.0",
     "flow-runtime": "^0.2.1",
