depricating json disintegration, will be saved on this branch all the related work, and will be deleted from master

--- a/server/config/cloud-config/models/questionConfig.json
+++ b/server/config/cloud-config/models/questionConfig.json
@@ -11,3 +11,15 @@
     "URL_FIELD": "url",
     "CLASS_NAME": "Question"
 }
+
+/*{
+    "id"{string | null}: ...,
+    "type" {mcq | ...}: ...,
+    "is_compulsary" {boolean}: ...,
+    "question_string" {string}: ...,
+    "options" {String Array}: ...,
+    "answers" {Integer Array}: ...,
+    "hints" {String Array}: ...,
+    "solution" {String}: ...,
+    "is_edited" {boolean}: ...
+}*/
